--- a/baewum.css
+++ b/baewum.css
@@ -1,4 +1,19 @@
 /* 애니메이션 */
+@keyframes scroll {
+  2% {
+    transform: translatey(0);
+  }
+  50% {
+    transform: translatey(-2697px);
+  }
+  100% {
+    transform: translatey(0);
+  }
+}
+.webscroll {
+  animation: scroll 40s 99999;
+  animation-timing-function: linear;
+}
 @keyframes gainsld {
   2% {
     transform: translate(0);
@@ -11,7 +26,8 @@
   }
 }
 .gainsld {
-  animation: gainsld 60s 99999;
+  animation: gainsld 40s 99999;
+  animation-timing-function: linear;
 }
 @keyframes la {
   0% {
@@ -23,6 +39,8 @@
 }
 .la {
   animation: la 2s 1;
+}
+@keyframes garo {
 }
 /* @keyframes centi */
 /* 개인 프로젝트 */
@@ -52,12 +70,13 @@
   position: relative;
   overflow: hidden;
   animation-fill-mode: forwards;
+  background: linear-gradient(to right, #e4d2fc, white);
 }
 .slide {
   width: 600px;
   height: 450px;
   position: absolute;
-  right: 150px;
+  right: 245px;
   bottom: 150px;
   overflow: hidden;
   border: 5px solid white;
@@ -73,8 +92,54 @@
 .projecttxt {
   font-family: "DXKPMB-KSCpc-EUC-H";
   position: absolute;
-  right: 20px;
-  bottom: 10px;
   opacity: 0;
   animation-fill-mode: forwards;
+}
+#projecttxt1 {
+  left: 220px;
+  bottom: 10px;
+}
+#projecttxt2 {
+  left: 220px;
+  bottom: 10px;
+}
+/* 학습한 것 */
+.jabji {
+  background-color: white;
+  width: 600px;
+  height: 424px;
+  position: absolute;
+  right: 245px;
+  bottom: 150px;
+  overflow: hidden;
+  border: 5px solid white;
+  box-shadow: 5px 5px 5px 5px gray;
+}
+#classsirclefirst,
+#classsirclesecond,
+#fnjd {
+  background-color: #443655;
+  color: white;
+}
+#fourthline,
+#fivthline {
+  background: linear-gradient(to right, #443655, white);
+}
+#fnjd {
+  margin-bottom: 200px;
+}
+.classtxt {
+  font-family: "DXKPMB-KSCpc-EUC-H";
+  position: absolute;
+  color: white;
+  opacity: 0;
+  animation-fill-mode: forwards;
+}
+#classtxt1 {
+  bottom: 20px;
+  left: 220px;
+}
+#classtxt2 {
+  bottom: 50px;
+  left: 220px;
 }
