--- a/teamplay.css
+++ b/teamplay.css
@@ -36,7 +36,7 @@
     height: 0px;
   }
   100% {
-    height: 500px;
+    height: 290px;
   }
 }
 .line {
@@ -45,8 +45,23 @@
 }
 .teamline {
   margin-bottom: 60px;
-  height: 500px;
+  height: 0px;
   width: 1260px;
   margin: 0 auto;
-  background-color: black;
+  padding-top: 50px;
+  box-sizing: border-box;
+  overflow: hidden;
+  animation-fill-mode: forwards;
+}
+.teamline h1 {
+  font-family: "DXKPMB-KSCpc-EUC-H";
+  color: black;
+  padding: 10px;
+  padding-left: 100px;
+}
+.tptitle {
+  font-size: 30px;
+}
+#tl4 {
+  margin-bottom: 100px;
 }
