--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 /* 왼쪽으로 나타나기와 오른쪽으로 나타나기 */
 @keyframes left {
   0% {
-    left: -1400px;
+    left: -100vw;
   }
   80% {
     left: 80px;
@@ -49,7 +49,7 @@
 }
 @keyframes right {
   0% {
-    right: -1400px;
+    right: -100vw;
   }
   80% {
     right: 80px;
@@ -127,7 +127,7 @@ header {
 }
 .baum1 {
   position: relative;
-  right: -1500px;
+  right: -100vw;
   animation-fill-mode: forwards;
   padding-top: 300px;
 }
@@ -136,7 +136,7 @@ header {
   margin-left: 280px;
   margin-bottom: 300px;
   padding-top: 300px;
-  left: -1500px;
+  left: -100vw;
   animation-fill-mode: forwards;
 }
 /* 프로젝트에서의 학습 */
@@ -154,7 +154,7 @@ header {
 .project1 {
   position: relative;
   padding-top: 300px;
-  right: -1500px;
+  right: -100vw;
   animation-fill-mode: forwards;
 }
 .project2 {
@@ -162,7 +162,7 @@ header {
   padding-top: 300px;
   margin-left: 280px;
   padding-bottom: 300px;
-  left: -1500px;
+  left: -100vw;
   animation-fill-mode: forwards;
 }
 /* 나에게 협동 */
@@ -181,7 +181,7 @@ header {
   left: -1400;
   position: relative;
   padding-top: 300px;
-  right: -1500px;
+  right: -100vw;
   animation-fill-mode: forwards;
   padding-bottom: 300px;
 }
