--- a/style.css
+++ b/style.css
@@ -95,6 +95,13 @@ header {
   font-family: "DXKPMB-KSCpc-EUC-H";
   margin: 12px 10px;
 }
+.headtxt {
+  position: absolute;
+  color: white;
+  font-size: 20px;
+  margin: 12px 10px;
+  font-family: "DXKPMB-KSCpc-EUC-H";
+}
 /* 나는 '' 테르입니다 부분 */
 .profile {
   background-color: #d8d8d8;
@@ -200,6 +207,8 @@ footer {
   color: white;
   margin: auto;
   font-size: 20px;
+  text-align: center;
+  width: 400px;
 }
 .footerlink {
   height: 200px;
